[package]
name = "clawsh-proto"
description = "Shared wire protocol and cryptography for the clawsh C2 framework"
version = "0.1.0"
edition = "2024"
authors = ["y0uall"]
license = "MIT"
repository = "https://github.com/y0uall/clawsh-proto"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
tokio = { version = "1", features = ["io-util"] }
